--- a/src/routes/Boards/TemplateEditor/TemplateEditor.scss
+++ b/src/routes/Boards/TemplateEditor/TemplateEditor.scss
@@ -5,7 +5,7 @@ $stable-content-width: 80%;
 .template-editor {
   display: flex;
   flex-direction: column;
-  gap: $spacing--xl;
+  gap: $spacing--base;
 
   min-width: 0;
   width: 100%;
@@ -20,13 +20,19 @@ $stable-content-width: 80%;
   grid-template-columns: 1fr;
   grid-template-areas:
     "name"
-    "description"
-    "debug";
-  row-gap: $spacing--md;
+    "description";
+  row-gap: $spacing--base;
   align-self: center;
 
   min-width: 0;
   width: $stable-content-width;
+
+  &--include-debug {
+    grid-template-areas:
+      "name"
+      "description"
+      "debug";
+  }
 }
 
 .template-editor__name {
@@ -37,6 +43,7 @@ $stable-content-width: 80%;
 }
 .template-editor__debug {
   grid-area: debug;
+  justify-self: center;
   color: $pink--500;
 }
 
@@ -45,12 +52,10 @@ $stable-content-width: 80%;
   display: grid;
   grid-template-columns: subgrid;
   grid-column: bleed-start / bleed-end; // defined by parent grid
-  grid-template-rows: min-content $spacing--md min-content;
+  grid-template-rows: min-content;
+  row-gap: $spacing--base;
 
-  grid-template-areas:
-    "columns"
-    "."
-    "mini";
+  grid-template-areas: "columns";
 }
 
 // info, buttons. contained width like header
@@ -157,6 +162,14 @@ $stable-content-width: 80%;
     width: 100%; // override stable content width
     grid-template-columns: subgrid;
     grid-column: bleed-start / bleed-end;
+  }
+
+  .template-editor__columns {
+    grid-template-rows: min-content min-content;
+
+    grid-template-areas:
+      "columns"
+      "mini";
   }
 
   .template-editor__columns-mini-view-wrapper {
